--- a/package.json
+++ b/package.json
@@ -10,15 +10,13 @@
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": ">=16.17.1"
+    "node": ">=16.15.0"
   },
   "dependencies": {
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
+    "body-parser": "^1.20.2",
     "express": "^4.18.1",
-    "pg": "^8.7.3",
-    "sequelize": "^6.21.3"
+    "firebase": "^9.22.2",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "eslint": "^7.26.0",
